--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="card">
         <img src="profile.jpg" alt="Profile Picture">
         <h2>Б.Энхчимэг</h2>
-        <p>Абсолют сургалтын төвийн "Гүйцэтгэх захирал"</p>
+        <p>"Гүйцэтгэх захирал"</p>
         <div class="line"></div>
         <p>📧 enkhchimeg@absolute.mn</p>
         <p>📞 +976 9900-8158</p>
